@@ -1,3 +1,7 @@
+2004-02-18  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-b40
+	* Rewrote the setup/ghcc.php script.  It's still not linked from
+	  anywhere just yet.
+
 2004-02-18  Don Willingham <donwillingh@users.sourceforge.net> 1.4.3-cvs-b39
 	* Change: html_wrap/inline_imagewrap.inc in response to sf.net bug
 	          #890804 titled "exposed php variable in inline_imagewrap.inc"
